--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<app-header></app-header>
-<app-users></app-users>
+<app-header/>
+<main>
+    <ul id=""users>
+        <li>
+        <app-user/>    
+        </li>
+    </ul>
+</main>
+
 
