--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,8 @@
 <div>
     <button> 
-        <img src="" alt="">
-        <span>NAME</span>
+        <img [src]="'assets/users/' + selectedUser.avatar" 
+        [alt]="selectedUser.name + ' avatar'"
+    />
+        <span>{{selectedUser.name}}</span>
     </button>
 </div>
