--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div>
-    <button> 
-        <img [src]="'assets/users/' + selectedUser.avatar" 
-        [alt]="selectedUser.name + ' avatar'"
+    <button (click)="getSelectedUser()"> 
+        <img [src]="imagePath()" 
+        [alt]="selectedUser().name + ' avatar'"
     />
-        <span>{{selectedUser.name}}</span>
+        <span>{{selectedUser().name}}</span>
     </button>
 </div>
