--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <app-header/>
 <main>
-    <ul id=""users>
+    <ul id="users">
         <li>
-        <app-user/>    
+        <app-user [avatar]="users[0].avatar" [name]="users[0].name" [id]="users[0].id" (select)="onSelectUser($event)"/>
         </li>
     </ul>
+    <app-tasks [name]="selectedUser.name"></app-tasks>
 </main>
 
 
