--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div>
     <button (click)="getSelectedUser()"> 
-        <img [src]="imagePath()" 
-        [alt]="selectedUser().name + ' avatar'"
+        <img [src]="imagePath" 
+        [alt]="name + ' avatar'"
     />
-        <span>{{selectedUser().name}}</span>
+        <span>{{name}}</span>
     </button>
 </div>
