Add user type and @for

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div>
     <button (click)="getSelectedUser()"> 
         <img [src]="imagePath" 
-        [alt]="name + ' avatar'"
+        [alt]="user.name + ' avatar'"
     />
-        <span>{{name}}</span>
+        <span>{{user.name}}</span>
     </button>
 </div>
