--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
-<app-header/>
+<app-header />
+
 <main>
-    <ul id="users">
-        <li>
-        <app-user [avatar]="users[0].avatar" [name]="users[0].name" [id]="users[0].id" (select)="onSelectUser($event)"/>
-        </li>
-    </ul>
-    <app-tasks [name]="selectedUser.name"></app-tasks>
+  <ul id="users">
+    @for (user of users; track user.id) {
+      <li>
+        <app-user [user]="user" (select)="onSelectUser($event)" />
+      </li>
+    }
+  </ul>
+
+  <app-tasks [name]="selectedUser ? selectedUser.name : ''" />
 </main>
-
-
