--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,8 @@
     }
   </ul>
 
-  <app-tasks [name]="selectedUser ? selectedUser.name : ''" />
+  @if (selectedUser){
+    <app-tasks [name]="selectedUser.name" />  
+  }
+
 </main>
