--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,8 @@
 
   @if (selectedUser){
     <app-tasks [name]="selectedUser.name" />  
+  } @else {
+    <p id=""fallback>Please select a user to see their tasks.</p>
   }
 
 </main>
