--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -6,7 +6,9 @@
         </menu>
     </header>
     <ul>
-        <li></li>
+        <li>
+            <app-task/>
+        </li>
     </ul>
 </section>
 
