--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </ul>
 
   @if (selectedUser){
-    <app-tasks [name]="selectedUser.name" />  
+    <app-tasks [name]="selectedUser.name" [selectedUserId]="selectedUser.id"/>  
   } @else {
     <p id=""fallback>Please select a user to see their tasks.</p>
   }
