Add completeTask button

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button (click)="getSelectedUser()"> 
+    <button [class.active]="isActive" (click)="getSelectedUser()"> 
         <img [src]="imagePath" 
         [alt]="user.name + ' avatar'"
     />
