--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
-<div>
+<app-card>
     <button [class.active]="isActive" (click)="getSelectedUser()"> 
         <img [src]="imagePath" 
         [alt]="user.name + ' avatar'"
     />
         <span>{{user.name}}</span>
     </button>
-</div>
+</app-card>
