--- a/src/app/tasks/add-task/add-task.component.html
+++ b/src/app/tasks/add-task/add-task.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop" (click)="cancelTask()"></div>
+<div class="backdrop" (click)="cancelOrCloseTask()"></div>
 <dialog open>
   <h2>Add Task</h2>
   <form (ngSubmit)="onSubmit()">
@@ -18,7 +18,7 @@
     </p>
 
     <p class="actions">
-      <button type="button" (click)="cancelTask()">Cancel</button>
+      <button type="button" (click)="cancelOrCloseTask()">Cancel</button>
       <button type="submit">Create</button>
     </p>
   </form>
