--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -2,7 +2,7 @@
     @if(task){
         <article>
             <h2>{{task.title}}</h2>
-            <time>{{task.dueDate | date: 'fulldate' }}</time>
+            <time>{{task.dueDate | date: 'fullDate' }}</time>
             <p>{{task.summary}}</p>
             <p class="actions">
             <button (click)="completeTask()">Complete</button>
